--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,21 @@
 *.pem
 *.key
+/.phpunit.cache
+/node_modules
+/public/build
+/public/hot
+/public/storage
+/storage/*.key
+/vendor
 .env
-vendor/
-.DS_Store
-Thumbs.db
+.env.backup
+.env.production
+.phpunit.result.cache
+Homestead.json
+Homestead.yaml
+auth.json
+npm-debug.log
+yarn-error.log
+/.fleet
+/.idea
+/.vscode
