--- a/.github/workflows/deploy-lightsail.yml
+++ b/.github/workflows/deploy-lightsail.yml
@@ -98,6 +98,41 @@ jobs:
             fi
           done
         
+    - name: Install Node.js on Lightsail
+      uses: appleboy/ssh-action@v0.1.5
+      with:
+        host: ${{ secrets.LIGHTSAIL_HOST }}
+        username: bitnami
+        key: ${{ secrets.LIGHTSAIL_SSH_KEY }}
+        script: |
+          if ! command -v node >/dev/null 2>&1; then
+            echo "Node.js not found. Installing..."
+            # Download and install Node.js v20.11.1
+            cd /tmp
+            wget https://nodejs.org/dist/v20.11.1/node-v20.11.1-linux-x64.tar.xz
+            sudo mkdir -p /opt/nodejs
+            sudo tar -xJvf node-v20.11.1-linux-x64.tar.xz -C /opt/nodejs --strip-components=1
+            
+            # Create global links
+            sudo ln -sf /opt/nodejs/bin/node /usr/bin/node
+            sudo ln -sf /opt/nodejs/bin/npm /usr/bin/npm
+            
+            # Cleanup
+            rm node-v20.11.1-linux-x64.tar.xz
+            
+            # Install PM2 globally
+            sudo /opt/nodejs/bin/npm install -g pm2
+            sudo ln -sf /opt/nodejs/bin/pm2 /usr/bin/pm2
+            
+            echo "Node.js v20.11.1 and PM2 installed successfully!"
+          else
+            echo "Node.js already installed. Skipping installation."
+          fi
+          
+          node -v
+          npm -v
+          pm2 -v
+        
     - name: Process vhosts files
       uses: appleboy/ssh-action@v0.1.5
       with:
