--- a/apps/vhosts/dealportal-https-vhost.conf
+++ b/apps/vhosts/dealportal-https-vhost.conf
@@ -3,8 +3,11 @@
     ServerAlias www.portal.techyline.com
     SSLEngine on
 
-    SSLCertificateFile "/etc/letsencrypt/live/portal.techyline.com/fullchain.pem"
-    SSLCertificateKeyFile "/etc/letsencrypt/live/portal.techyline.com/privkey.pem"
+    SSLCertificateFile "/opt/bitnami/apache/conf/bitnami/certs/server.crt"
+    SSLCertificateKeyFile "/opt/bitnami/apache/conf/bitnami/certs/server.key"
+
+    # SSLCertificateFile "/etc/letsencrypt/live/portal.techyline.com/fullchain.pem"
+    # SSLCertificateKeyFile "/etc/letsencrypt/live/portal.techyline.com/privkey.pem"
 
     # Serve React build files
     DocumentRoot /opt/bitnami/apache/apps/dealportal
